--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1>Odin Recipes!</h1>
     <ul>
        <li><a href="recipes/pizza.html">Pizza</a></li>
+       <li><a href="recipes/cookies.html">Cookies</a></li>
     </ul>
     </body>
 </html>
